[package]
name = "datalog_ast"
version = "0.2.5"
edition = "2021"
authors = ["Sam Hart"]
description = "Abstract Syntax Tree types for Datalog programs"
repository = "https://github.com/jsam/datalog_ast"
license = "MIT OR Apache-2.0"
keywords = ["datalog", "ast", "logic-programming", "parser", "database"]
categories = ["parser-implementations", "data-structures"]
readme = "README.md"
rust-version = "1.74"

[dependencies]

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
